# web

./: .gitignore  .pre-commit-config.yaml  .prettierignore  Makefile  README.md  config.toml  pyproject.toml
.github/workflows/: deploy.yml  test.yml
content/: _index.md  about.md
content/blog/: _index.md  first-post.md
content/blog/first-post/: index.md
content/blog/sustainability-and-data/: index.md
docs/: PREK_SETUP.md
sass/: style.scss
scripts/: install-zola.sh  run_md_blocks.py  sync_md.py
static/css/: style.css
templates/: 404.html  _base.html  base.html  blog.html  homepage.html  index.html  page.html
templates/macros/: index_macros.html  post_macros.html
templates/partials/: footer.html
tests/: test_blog_code.py
themes/radion/: .gitignore  README.md  theme.toml  typos.toml
themes/radion/.github/workflows/: typos.yml
themes/radion/content/: latex-example.md  markdown-demo.md
themes/radion/content/configuration/: index.md
themes/radion/templates/macros/: index_macros.html
